<?xml version="1.0"?>
<package format="3">
    <name>mesh</name>
    <version>0.1.0</version>
    <description>mesh</description>

  <maintainer email="tech@eurekasystem.it">eureka</maintainer>

  <author>Gava Mattia</author>

  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_pal</exec_depend>

  <exec_depend>mesh_skill_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
      <build_type>ament_python</build_type>
      <implements type="skill" package="mesh_skill_msgs" id="mesh" />
  </export>
</package>