<?xml version="1.0"?>
<package format="3">
  <name>mesh_skill_msgs</name>
  <version>1.0.0</version>
  <description>{mesh skill definition</description>

  <maintainer email="tech@eurekasystem.it">Eureka system</maintainer>

  <author>Gava Mattia</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_skills</depend>
  <depend>action_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_archlint</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  <build_type>ament_cmake</build_type>
  <skill content-type="json">
    {
      "id": "mesh",
      "description": "Mesh skill definition. The skill generates a reconstructed 3D mesh from the point cloud of a specified object.",
      "version": "1.0.0",
      "interface": "action",
      "default_interface_path": "src/mesh_skill_msgs/action",
      "datatype": "mesh_skill_msgs/action/Mesh",
      "parameters": {
        "in": [
          {
            "name": "scan_id",
            "type": "string",
            "description": "This parameter uniquely identifies the object to generate the mesh for."
          }
        ],
        "out": [
          {
            "name": "result",
            "type": "int64",
            "description": "This parameter represents the result and enables specifying various types of success and failure."
          }
        ]
      },
      "functional_domains": [
        "perception"
      ]
    }
  </skill>
</export>
</package>
